# xy2pct

./: .gitignore  LICENSE  README.md  generatelaparray.py  parselaparray.py  pyproject.toml  xy2pct.py
.github/workflows/: python-package-conda.yml  python-package.yml
expy/: Belgium.txt  Monaco.txt  Singapore.txt  Spa-Francorchamps.txt
src/xy2pct/: __init__.py  givetrackarray.py  openf1.py  xy2pct.py
src/xy2pct.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/xy2pct/expy/: Hungaroring.txt  Singapore.txt
src/xy2pct/mapgeneration/: belgiumtrackmap.py  generatelaparray.py  parselaparray.py
tests/: test_givetrackarray.py  test_xy2pct.py
