[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xy2pct"
version = "0.2.0"
description = "Convert track coordinates to percentages along a lap"
readme = "README.md"
authors = [{ name = "jusaaatin", email = "jusaaatin@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
"Development Status :: 4 - Beta",
"License :: OSI Approved :: MIT License",
"Programming Language :: Python",
"Programming Language :: Python :: 3",
"Operating System :: MacOS :: MacOS X",
"Operating System :: Microsoft :: Windows",
"Intended Audience :: Education",
"Intended Audience :: Developers"
]
keywords = ["xy2pct", "f1", "percentages", "coordinates", "track", "lap", "data", "analysis"]
requires-python = ">=3.10"
dependencies = [
	"numpy",
	"matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
